Fixed chat height and add vertical scroll on overflow

--- a/client/src/chat/Chat.css
+++ b/client/src/chat/Chat.css
@@ -1,3 +1,5 @@
 .chat {
     min-width: 20%;
+    overflow: auto;
+    height: 85%;
 }
